[tool.poetry]
name = "playbooks"
version = "0.0.1"
description = ""
authos = ["djantzlur <djantzlur@users.noreply.github.com>"]

#[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
robusta-cli = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"